# pyls-project

./: .gitignore  README.md  main.py  pyproject.toml  sample_json.json
core/: display.py
models/: file_system_entry.py
pyls/: __main__.py
pyls/core/: display.py
pyls/models/: file_system_entry.py
pyls/tests/: conftest.py  test_display.py  test_file_system_entry.py  test_formatting.py
pyls/utils/: formatting.py
tests/: conftest.py  test_display.py  test_file_system_entry.py  test_formatting.py
utils/: formatting.py
