[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "1.0.0"
authors = [{ name = "Darshan D" }]
description = "Command-line tool, similar to the 'ls' command, allowing users to view information about a file system"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest>=5.2.1",
    "setuptools>=65.6.3",
]

[project.scripts]
pyls = "pyls.__main__:main"
